--- a/hello_world.yml
+++ b/hello_world.yml
@@ -3,5 +3,5 @@
   tasks:
     - name: Hello Message
       debug:
-        msg: "Hello World!"
+        msg: "{{ message | default('Hello World !') }}"
 
